meta-build.xml => build.xml generated-build.xml => antlips.xml
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2396 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/build.xml
+++ b/build.xml
@@ -45,7 +45,7 @@
 	</target>
 	
 	<target name="build" depends="clean, build.xml.generation">
-		<ant antfile="generated-build.xml" />
+		<ant antfile="antlips.xml" />
 	</target>
 	
 	<target name="clover-report">
