--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,9 @@
 	</target>
 		
 	<target name="test-execution" depends="build">
-		<junit printsummary="true" failureproperty="junit.failures" fork="yes">
+		<junit printsummary="true" failureproperty="junit.failures"
+				fork="yes"
+				dir="${build.dir}">
 			<classpath>
 				<fileset dir=".">
 					<include name="**/lib/**/*.jar" />
@@ -44,7 +46,7 @@
 		<delete dir="${build.dir}"/>
 	</target>
 	
-	<target name="build" depends="clean, build.xml.generation">
+	<target name="build" depends="clean, antlips.xml">
 		<ant antfile="antlips.xml" />
 	</target>
 	
@@ -75,8 +77,7 @@
 	    </clover-report>
 	</target>
 	
-	<target name="build.xml.generation" depends="init">
-		
+	<target name="antlips.xml" depends="init">
 		
 		<path id="wheel.lib.classpath">
 			<fileset dir="wheel/lib">
