fixing clover fileset configuration
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2406 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/build.xml
+++ b/build.xml
@@ -56,8 +56,8 @@
 	
 	<target name="clover-report" depends="init-clover, test-execution">
 		
-		<fileset dir="${build.dir}" id="clover.sources">
-			<include name="**/*.java" />
+		<fileset dir="." id="clover.sources">
+			<include name="*/src/**/*.java" />
 			<exclude name="spikes/**" />
 		</fileset>
 		
