use separate output folders for the continuous build; each output folder should appear in the classpath
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2529 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/build.xml
+++ b/sneer/build.xml
@@ -104,7 +104,7 @@
 				<pathelement location="${build.dir}" />
 				<path refid="wheel.lib.classpath" />
 			</classpath>
-			<arg value="-sourcefolderstogether" />
+			<arg value="-separatedsourcefolders" />
 		</java>
 	</target>
 	
