Build dependencies fixed.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2532 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/build.xml
+++ b/sneer/build.xml
@@ -22,6 +22,7 @@
 					<include name="**/lib/**/*.jar" />
 				</fileset>
 				<pathelement location="${build.dir}" />
+				<pathelement location="sneerAPI-bin" />
 				
 				<!-- resource files required by tests -->
 				<pathelement location="${builder.project}/src" />
