clover stuff moved to generated file
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2539 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/build.xml
+++ b/sneer/build.xml
@@ -5,7 +5,7 @@
 	<property name="builder.project" value="antlips" />
 	
 	<target name="hudson" depends="antlips.xml">
-		<ant antfile="clover-build.xml" />
+		<ant antfile="antlips.xml" target="clover-report" />
 	</target>
 	
 	<target name="clean" depends="antlips.xml">
