--- a/sneer/build.xml
+++ b/sneer/build.xml
@@ -35,6 +35,7 @@
 			encoding="utf-8"
 			source="1.6"
          	target="1.6">
+			<compilerarg value="-Xlint:unchecked"/>
 			<src path="wheel/src" />
 			<src path="${builder.project}/src" />
 		</javac>
