run tests in headless mode by default (for the continuous build)
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2593 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/antlips/src/antlips/antFileGenerator/source-folders-separate.template
+++ b/sneer/antlips/src/antlips/antFileGenerator/source-folders-separate.template
@@ -26,6 +26,7 @@
 		
 	<target name="test-execution" depends="compile">
 		<junit printsummary="true" failureproperty="junit.failures" fork="yes">
+			<sysproperty key="java.awt.headless" value="${java.awt.headless}" />
 			<classpath>
 				<path refid="classpath" />
 			</classpath>
