--- a/sneer/build.xml
+++ b/sneer/build.xml
@@ -2,6 +2,7 @@
 <project name="sneer" default="clean-test">
 	
 	<property name="build.dir" value="bin/build" />
+	<property name="java.awt.headless" value="true" />
 	<property name="builder.project" value="antlips" />
 	
 	<target name="hudson" depends="clean, antlips.xml">
