--- a/sneer/antlips/src/antlips/antFileGenerator/source-folders-separate.template
+++ b/sneer/antlips/src/antlips/antFileGenerator/source-folders-separate.template
@@ -3,6 +3,7 @@
 <project name="AntBuild" default="test">
 
 	<property name="build.dir" location="bin" />
+	<property name="clover.jar" location="antlips/lib/clover.jar" />
 
 	<path id="classpath">
 <%
@@ -29,6 +30,7 @@
 			<sysproperty key="java.awt.headless" value="${java.awt.headless}" />
 			<classpath>
 				<path refid="classpath" />
+				<pathelement location="${clover.jar}" />
 			</classpath>
 <%
 	for (final String destDir : value.destDirs()) {
@@ -94,7 +96,6 @@
 
 	<!-- clover support -->
 	<target name="init-clover">
-		<property name="clover.jar" location="antlips/lib/clover.jar" />
 		<taskdef resource="cloverlib.xml" classpath="${clover.jar}"/>
 		<clover-setup initString="mycoverage.db"/>
 	</target>
