--- a/sneer/antlips/src/antlips/antFileGenerator/source-folders-separate.template
+++ b/sneer/antlips/src/antlips/antFileGenerator/source-folders-separate.template
@@ -124,13 +124,40 @@
 	       </current>
 	    </clover-report>
 	</target>
-	
-	<target name="makeJavaWebStart" depends="makeJnlp">
-		<jar destfile="${webstart.dir}/kernel.jar" basedir="bin-kernel"/>
-		<jar destfile="${webstart.dir}/sneer.jar" basedir="${build.dir}"/>
+
+	<target name="makeJavaWebStart" depends="makeJars, makeJnlp">
 	</target>
+
+	<target name="makeJars">
+		<delete dir="${webstart.dir}"/>
+		<mkdir dir="${webstart.dir}"/>
+
+		<jar destfile="${webstart.dir}/kernel.jar">
+		    <fileset dir="bin-kernel">
+		    	<exclude name='**/*.txt'/>
+		    	<exclude name='**/tests/**'/>
+		    </fileset>
+		</jar>
 		
-	<target name="makeJnlp" depends="copyJars">
+		<jar destfile="${webstart.dir}/sneer.jar">
+		    <fileset dir="${build.dir}/build">
+		    	<exclude name='**/*.txt'/>
+		    	<exclude name='**/tests/**'/>
+		    	<exclude name='functional/**'/>
+		    	<exclude name='spikes/**'/>
+		    	<exclude name='antlips/**'/>
+				<exclude name='build/**'/>
+		    </fileset>
+		</jar>
+	</target>
+
+	<target name="signJars" depends="copyJars"><%
+for (final String lib : value.libs()) { 
+	String fileName = new java.io.File(lib).getName();%>
+		<signjar keystore="sneerKeystore" jar="${webstart.dir}/<%=fileName%>" alias="bihaiko" storepass="amanda"/><%}%>
+	</target>
+
+	<target name="makeJnlp" depends="signJars">
 		<echoxml file="${webstart.dir}/sneer.jnlp">
 			<jnlp spec="1.0+" codebase="file:///${webstart.dir}" href="sneer.jnlp">
 				<information>
@@ -153,11 +180,9 @@ for (final String lib : value.libs()) {
 			</jnlp>
 		</echoxml>
 	</target>
-	
-	<target name="copyJars">
-		<delete dir="${webstart.dir}"/>
-		<mkdir dir="${webstart.dir}"/>
-<% for (final String lib : value.libs()) { %>
+
+	<target name="copyJars"><%
+for (final String lib : value.libs()) { %>
 		<copy todir="${webstart.dir}" file="<%=lib%>"/><% } %>					
 	</target>
 			
