--- a/sneer/antlips/src/antlips/antFileGenerator/source-folders-separate.template
+++ b/sneer/antlips/src/antlips/antFileGenerator/source-folders-separate.template
@@ -2,7 +2,7 @@
 
 <project name="AntBuild" default="test">
 
-	<property name="webstart.dir" location="jws" />
+	<property name="webstart.dir" location="webstart" />
 	<property name="build.dir" location="bin" />
 	<property name="clover.jar" location="antlips/lib/clover.jar" />
 
@@ -129,17 +129,17 @@
 	</target>
 
 	<target name="makeJars">
-		<delete dir="${webstart.dir}"/>
-		<mkdir dir="${webstart.dir}"/>
+		<delete dir="${webstart.dir}/build"/>
+		<mkdir dir="${webstart.dir}/build"/>
 
-		<jar destfile="${webstart.dir}/kernel.jar">
+		<jar destfile="${webstart.dir}/build/kernel.jar">
 		    <fileset dir="bin-kernel">
 		    	<exclude name='**/*.txt'/>
 		    	<exclude name='**/tests/**'/>
 		    </fileset>
 		</jar>
 		
-		<jar destfile="${webstart.dir}/sneer.jar">
+		<jar destfile="${webstart.dir}/build/sneer.jar">
 		    <fileset dir="${build.dir}/build">
 		    	<exclude name='**/*.txt'/>
 		    	<exclude name='**/tests/**'/>
@@ -154,20 +154,20 @@
 	<target name="signJars" depends="copyJars"><%
 for (final String lib : value.libs()) { 
 	String fileName = new java.io.File(lib).getName();%>
-		<signjar keystore="sneerKeystore" jar="${webstart.dir}/<%=fileName%>" alias="bihaiko" storepass="amanda"/><%}%>
+		<signjar keystore="${webstart.dir}/sneerKeystore" jar="${webstart.dir}/build/<%=fileName%>" alias="bihaiko" storepass="amanda"/><%}%>
 	</target>
 
 	<target name="makeJnlp" depends="signJars">
-		<echoxml file="${webstart.dir}/sneer.jnlp">
-			<jnlp spec="1.0+" codebase="file:///${webstart.dir}" href="sneer.jnlp">
+		<echoxml file="${webstart.dir}/build/sneer.jnlp">
+			<jnlp spec="1.0+" codebase="file:///${webstart.dir}/build" href="sneer.jnlp">
 				<information>
 					<title>Sneer!</title>
 					<vendor>Sovereign Computing</vendor>
-					<description></description>
-					<description kind="short"></description>
-					<homepage href=""/>
-					<offline-allowed/>
+					<description>Sovereign computing is the freedom to share information and hardware resources with your friends, any way you like.:)</description>
+					<description kind="short">Sneer is a java-based, free software platform for sovereign applications.</description>
+					<homepage href="http://sovereigncomputing.net/"/>
 				</information>
+				<update check="timeout" policy="always"/>
 				<resources>     
 					<jar href="sneer.jar"/>  
 					<jar href="kernel.jar"/><% 
@@ -183,7 +183,7 @@ for (final String lib : value.libs()) {
 
 	<target name="copyJars"><%
 for (final String lib : value.libs()) { %>
-		<copy todir="${webstart.dir}" file="<%=lib%>"/><% } %>					
+		<copy todir="${webstart.dir}/build" file="<%=lib%>"/><% } %>					
 	</target>
-			
+
 </project>
