brick impls must not be public; snuggin nature
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@3414 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/.project
+++ b/sneer/.project
@@ -10,8 +10,14 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>snuggin.sneerBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>snuggin.sneerNature</nature>
 	</natures>
 </projectDescription>
