--- a/sneer/build.xml
+++ b/sneer/build.xml
@@ -25,8 +25,8 @@
 	
 	<target name="antlips.xml" depends="init">
 		
-		<path id="wheel.lib.classpath">
-			<fileset dir="wheel/lib">
+		<path id="commons.lib.classpath">
+			<fileset dir="commons/lib">
 				<include name="**/*.jar" />
 			</fileset>
 			<fileset dir="${builder.project}/lib">
@@ -35,14 +35,14 @@
 		</path>
 		
 		<javac destdir="${build.dir}"
-			classpathref="wheel.lib.classpath"
+			classpathref="commons.lib.classpath"
 			listfiles="true"
 			failonerror="true"
 			debug="on"
 			encoding="utf-8"
 			source="1.6"
          	target="1.6">
-			<src path="wheel/src" />
+			<src path="commons/src" />
 			<src path="${builder.project}/src" />
 		</javac>
 		
@@ -50,7 +50,7 @@
 			<classpath>
 				<pathelement location="${build.dir}" />
 				<pathelement location="${builder.project}/src" />
-				<path refid="wheel.lib.classpath" />
+				<path refid="commons.lib.classpath" />
 			</classpath>
 			<arg value="-separatedsourcefolders" />
 		</java>
