--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -2,12 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="spikes/src"/>
 	<classpathentry kind="src" path="tests/src"/>
+	<classpathentry kind="src" path="kernel/src"/>
 	<classpathentry kind="src" path="bricks/src"/>
 	<classpathentry kind="src" path="antlips/src"/>
 	<classpathentry kind="src" output="bin-kernel" path="wheel/src"/>
 	<classpathentry kind="src" path="brickness/src"/>
 	<classpathentry kind="src" path="commons/src"/>
-	<classpathentry kind="src" path="kernel/impl"/>
 	<classpathentry kind="lib" path="spikes/lib/Filters.jar"/>
 	<classpathentry kind="lib" path="spikes/lib/lucene-demos-2.3.2.jar"/>
 	<classpathentry kind="lib" path="kernel/lib/asm-all-3.1.jar"/>
