--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="spikes/src"/>
 	<classpathentry kind="src" path="tests/src"/>
 	<classpathentry kind="src" path="kernel/src"/>
+	<classpathentry kind="src" path="container/src"/>
 	<classpathentry kind="src" path="bricks/src"/>
 	<classpathentry kind="src" path="antlips/src"/>
 	<classpathentry kind="src" output="bin-kernel" path="wheel/src"/>
