--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -5,12 +5,12 @@
 	<classpathentry kind="src" path="container/src"/>
 	<classpathentry kind="src" path="bricks/src"/>
 	<classpathentry kind="src" path="antlips/src"/>
-	<classpathentry kind="src" output="bin-kernel" path="wheel/src"/>
+	<classpathentry kind="src" path="wheel/src"/>
 	<classpathentry kind="src" path="brickness/src"/>
 	<classpathentry kind="src" path="commons/src"/>
 	<classpathentry kind="lib" path="spikes/lib/Filters.jar"/>
 	<classpathentry kind="lib" path="spikes/lib/lucene-demos-2.3.2.jar"/>
-	<classpathentry kind="lib" path="kernel/lib/asm-all-3.1.jar"/>
+	<classpathentry kind="lib" path="spikes/lib/asm-all-3.1.jar"/>
 	<classpathentry kind="lib" path="bricks/src/snapps/wind/impl/lib/prevayler-2.3.jar" sourcepath="bricks/src/snapps/wind/impl/lib/prevayler-2.3.src.zip"/>
 	<classpathentry kind="lib" path="bricks/src/snapps/wind/impl/lib/xpp3_min-1.1.3_8.jar"/>
 	<classpathentry kind="lib" path="bricks/src/snapps/whisper/speex/impl/lib/speex.jar"/>
