Organizing Brickness packages
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@3573 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="spikes/src"/>
 	<classpathentry kind="src" path="tests/src"/>
-	<classpathentry kind="src" path="container/src"/>
+	<classpathentry kind="src" path="brickness-impl/src"/>
 	<classpathentry kind="src" path="bricks/src"/>
 	<classpathentry kind="src" path="antlips/src"/>
 	<classpathentry kind="src" path="wheel/src"/>
