--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry exported="true" kind="lib" path="commons/lib/commons-lang-2.3.jar" sourcepath="commons/lib/commons-lang-2.3-src.zip"/>
 	<classpathentry kind="lib" path="spikes/src/spikes/sandro/swing/layers/lib/jxlayer.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="spikes/lib/javassist.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
