added some files to test webstart

--- a/sneer/build.xml
+++ b/sneer/build.xml
@@ -60,4 +60,8 @@
 		<mkdir dir="${build.dir}" />
 	</target>
 	
+	<target name="webstart">
+		<ant antfile="webstart/build.xml" target="main"/>
+	</target>
+	
 </project>
