--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -3,8 +3,9 @@
 	<classpathentry kind="src" path="spikes/src"/>
 	<classpathentry kind="src" path="tests/src"/>
 	<classpathentry kind="src" path="bricks/src"/>
-	<classpathentry kind="src" path="antlips/src"/>
+	<classpathentry kind="src" path="installer/src"/>
 	<classpathentry kind="src" path="brickness/src"/>
+	<classpathentry kind="src" path="antlips/src"/>
 	<classpathentry kind="src" path="commons/src"/>
 	<classpathentry kind="lib" path="spikes/lib/Filters.jar"/>
 	<classpathentry kind="lib" path="spikes/lib/lucene-demos-2.3.2.jar"/>
