installer - added some progress.

--- a/sneer/webstart/build.xml
+++ b/sneer/webstart/build.xml
@@ -3,8 +3,9 @@
 	
 	<property name="build.dir" location="./build"/>
 	<property name="jnlp.file" location="${build.dir}/sneer-bootstrap.jnlp"/>
+	<property name="jnlp.mainClass" value="sneer.installer.Main"/>
 
-	<target name="main" depends="clean, log, makeJars, makeJnlp">
+	<target name="main" depends="clean, log, copyJars, makeJars, makeJnlp, signJars">
 	</target>
 
 	<target name="clean">
@@ -25,7 +26,7 @@
 		<record name="build/log.txt" action="stop" />
 	</target>
 	
-	<target name="makeJnlp" depends="signJars">
+	<target name="makeJnlp">
 		<echoxml file="build/sneer.jnlp">
 			<!--jnlp spec="1.0+" codebase="${env.HUDSON_URL}job/${env.JOB_NAME}/${env.BUILD_NUMBER}/artifact/build/" href="sneer.jnlp"-->
 			<jnlp spec="1.0+" codebase="file:///${build.dir}" href="sneer.jnlp">
@@ -39,12 +40,14 @@
 				<update check="timeout" policy="always"/>
 				<resources>     
 					<jar href="sneer-bootstrap.jar"/>			
+					<jar href="commons-io-1.4.jar"/>			
+					<jar href="commons-lang-2.3.jar"/>			
 					<j2se version="1.6+" href="http://java.sun.com/products/autodl/j2se"/>
 				</resources>
 				<security>
 					<all-permissions/>
 				</security>
-				<application-desc main-class="sneer.installer.OlaMundo"/>
+				<application-desc main-class="${jnlp.mainClass}"/>
 			</jnlp>
 		</echoxml>
 	</target>
@@ -53,17 +56,24 @@
 		<jar destfile="./build/sneer-bootstrap.jar">
 		    <fileset dir="../bin">
 		    	<exclude name='**/*.txt'/>
-		    	<exclude name='**/tests/**'/>
-		    	<exclude name='functional/**'/>
-		    	<exclude name='spikes/**'/>
-		    	<exclude name='antlips/**'/>
 				<exclude name='build/**'/>
 		    </fileset>
 		</jar>
 	</target>
+	
+    <target name="copyJars">
+    	<copy todir="./build">
+    		<fileset dir="../commons/lib">
+    			<include name='commons-io-1.4.jar'/>
+    			<include name='commons-lang-2.3.jar'/>
+    		</fileset>
+    	</copy>
+    </target>
 
 	<target name="signJars" depends="makeJars">
 		<signjar keystore="sneerKeystore" jar="./build/sneer-bootstrap.jar" alias="bihaiko" storepass="amanda"/>
+		<signjar keystore="sneerKeystore" jar="./build/commons-io-1.4.jar" alias="bihaiko" storepass="amanda"/>
+		<signjar keystore="sneerKeystore" jar="./build/commons-lang-2.3.jar" alias="bihaiko" storepass="amanda"/>
 	</target>
 
 </project>
