--- a/sneer/.classpath
+++ b/sneer/.classpath
@@ -23,7 +23,7 @@
 	<classpathentry kind="lib" path="commons/lib/jmock-2.5.1/hamcrest-library-1.1.jar" exported="true"/>
 	<classpathentry kind="lib" path="commons/lib/jmock-2.5.1/jmock-2.5.1.jar" exported="true"/>
 	<classpathentry kind="lib" path="commons/lib/jmock-2.5.1/jmock-junit4-2.5.1.jar" exported="true"/>
-	<classpathentry kind="lib" path="commons/lib/junit-4.4.jar" sourcepath="C:/java/junit-4.4-src.jar" exported="true"/>
+	<classpathentry kind="lib" path="commons/lib/junit-4.4.jar" sourcepath="commons/lib/junit-4.4-src.jar" exported="true"/>
 	<classpathentry kind="lib" path="commons/lib/commons-io-1.4.jar" sourcepath="commons/lib/commons-io-1.4-src.zip" exported="true"/>
 	<classpathentry kind="lib" path="commons/lib/collections-generic-4.01/collections-generic-4.01.jar" sourcepath="commons/lib/collections-generic-4.01/src/java" exported="true"/>
 	<classpathentry kind="lib" path="commons/lib/commons-lang-2.3.jar" sourcepath="commons/lib/commons-lang-2.3-src.zip" exported="true"/>
